# FreeRTOSOnPicoPi

./: CMakeLists.txt  LICENSE  README.md  main.c  memory.c  tasks.c
include/: FreeRTOSConfig.h
